plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'jp.co.translacat'
version = '0.0.1-SNAPSHOT'
description = 'translacat'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // log4jdbc
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

    // web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // web socket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Resilience4j
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Spring AI Google GenAI
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai:1.1.2'

    // analysis html
    implementation 'org.jsoup:jsoup:1.15.3'

    // google login
    implementation 'com.google.api-client:google-api-client:2.8.1'

    // using furigana.
    implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
    implementation 'com.worksap.nlp:sudachi:0.7.5'

    // Logback JSON encoder
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'

    // S3-compatible object storage (Cloudflare R2)
    implementation platform('software.amazon.awssdk:bom:2.46.21')
    implementation 'software.amazon.awssdk:s3'

    // retry
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()

    // Test workers use a JVM separate from the Gradle daemon.
    // Override for the local/CI memory budget with -PtestMaxHeapSize=2g.
    maxHeapSize = providers.gradleProperty('testMaxHeapSize').orElse('1g').get()

    // Keep the original cause visible when Spring context initialization fails.
    testLogging {
        exceptionFormat = 'full'
    }
}

def generated = "$projectDir/src/main/generated"

sourceSets {
    main {
        java {
            srcDir generated
        }
    }
}

tasks.named('compileJava') {
    options.annotationProcessorPath = configurations.annotationProcessor
}

clean {
    delete file(generated)
}
